Fixed bottom-button that was not aligned or styled correctly

--- a/style.css
+++ b/style.css
@@ -202,6 +202,18 @@ ul {
     flex: 1;
 }
 
+.bottom-button {
+    color: white;
+    background-color: #3882F6;
+    border-radius: 20px;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 12px;
+    margin-left: 250px;
+    border: 1px solid white;
+}
+
 .sign-text {
     text-align: left;
 }
